--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 # kalydiallo.github.io
 <!doctype html>
-<head>
+<html>
+  <head>
 <title>this is my website</title>
 </head>
 <body>
-  <p> the
+  <p> welcom to my website </p>
 </body>
+</html>
