--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>this is my website</title>
 </head>
 <body>
-  <p> welcom to my website </p>
+  <p> welcome to my website </p>
+  <p></p>
 </body>
 </html>
