--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 # kalydiallo.github.io
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-<title>this is my website</title>
+<head>
+  <title>Ollie Bike Sharing</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+<div class="container">
 <body>
-  <p> welcome to my website </p>
-  <p></p>
-</body>
+<div class="nav">
+ <h2>Ollie</h2>
+  <ul>
+  	<li>sign up</li>
+    <li>search bikes</li>
+    <li>reserve a bike</li>
+    <li>about us</li>
+  </ul>
+<div class="main">
+<h1>ollie Bike Sharing</h1>
+<h3>Share your pedals to the World!</h3>
+  <video width="320" height="240" controls>
+    <source src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
+  </video>
+  </div>
+   <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental.</p>
+  <p>Here is a<a href="cities.html">list</a> of cities where you can find us</p>
+  </div>
+
+		</body>
+  </div>
 </html>
