--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Kaly Transport Website</title>
+<head>
+<body>
+	
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<head>
   <title>Ollie Bike Sharing</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="main.css">
@@ -11,7 +21,7 @@
 <div class="nav">
  <h2>Ollie</h2>
   <ul>
-  	<li>sign up</li>
+    <li>sign up</li>
     <li>search bikes</li>
     <li>reserve a bike</li>
     <li>about us</li>
@@ -26,7 +36,6 @@
    <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental.</p>
   <p>Here is a<a href="cities.html">list</a> of cities where you can find us</p>
   </div>
-
-		</body>
+</body>
   </div>
 </html>
